try to draw the diagram of structures space

--- a/HelicesRNAs.tex
+++ b/HelicesRNAs.tex
@@ -17,7 +17,6 @@
 
 
 
-
 %\usetheme{Berlin}
 \usetheme{Darmstadt}
 \useoutertheme[subsection=false]{miniframes}
@@ -268,28 +267,12 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
 \begin{frame}
 \frametitle{Growth of structure, helices and shape space}
     \centering
-% 	\begin{tikzpicture}
-% 		\begin{axis}[ymin=0]
-% 			\addplot table {data1.dat};
-% 		\end{axis}
-% 	\end{tikzpicture}
 	\begin{tikzpicture}
-		\begin{axis}[width=0.9\textwidth,height=0.9\textheight,
-			title={Niederschlag in den letzten 60 Jahren},
-			xtick={1946,1950,1955,1960,1965,1970,1975,1980,1985,1990,1995,2000,2005},
-			x tick label style={/pgf/number format/1000 sep=},
-			xlabel={Jahr},
-			y tick label style={/pgf/number format/1000 sep=},
-			extra y ticks={456.1, 1022.4},
-			extra y tick labels={{456,1},{1022,4}},
-			extra y tick style={grid=major,
-				tick label style={xshift=-1cm}},
-			ylabel={mm},
-			enlarge x limits=0.01]
-			
-			\addplot table[x=Jahr, y=Summe] {data2.dat};
-		\end{axis}
+		\begin{semilogyaxis}[xlabel=Index,ylabel=Value]
+		\addplot gnuplot[color=blue,mark=*]{1.2196*(x**(-1.5))*(2.6180**x)}; 
+		\end{semilogyaxis}
 	\end{tikzpicture}
+
 \end{frame}
 
 \begin{frame}
