edit figure growth of *

--- a/HelicesRNAs.tex
+++ b/HelicesRNAs.tex
@@ -14,6 +14,7 @@
 
 \usepackage{pgfplots}
 \pgfplotsset{width=7cm,compat=1.3}% <-- moves axis labels near ticklabels (respects tick label widths)
+\usepackage{pgfplotstable}
 
 
 
@@ -265,14 +266,49 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
 \end{frame}
 
 \begin{frame}
-\frametitle{Growth of structure, helices and shape space}
+\frametitle{Growth of structure, helix and shape space}
     \centering
 	\begin{tikzpicture}
-		\begin{semilogyaxis}[xlabel=Index,ylabel=Value]
-		\addplot gnuplot[color=blue,mark=*]{1.2196*(x**(-1.5))*(2.6180**x)}; 
-		\end{semilogyaxis}
-	\end{tikzpicture}
+		%\begin{semilogyaxis}[xlabel=Index,ylabel=Value]
+		%\addplot gnuplot[color=blue,mark=*]{1.2196*(x**(-1.5))*(2.6180**x)}; 
+		%\end{semilogyaxis}
+		\begin{semilogyaxis}[legend style={font=\small},xlabel={Sequence
+         length},ylabel={Nr. of
+         Structures/Helices/Shapes},width=\textwidth,legend style={nodes=right},
+         legend pos= north west]
+     
+        
+         \addplot+[only marks,mark=+]
+         table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAsubopt.txt};
+         \addlegendentry{Structures}         
+         \addplot table[x=X,y={create col/linear
+         regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAsubopt.txt};
+         \addlegendentry{$0.33 \cdot x -3.24$}
+         
+         
+         \addplot+[only marks,mark=-]
+         table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix.txt};
+         \addlegendentry{Helices}         
+         \addplot table[x=X,y={create col/linear
+         regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix.txt};
+         \addlegendentry{$0.12 \cdot x +0.36$}
+         
+  
+         \addplot+[only marks,mark=x]
+         table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAshapes_5.txt};
+         \addlegendentry{Shapes}                   
+         \addplot table[x=X,y={create col/linear
+         regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAshapes_5.txt};                 
+         \addlegendentry{
+$\pgfmathprintnumber{\pgfplotstableregressiona} \cdot x
+\pgfmathprintnumber[print sign]{\pgfplotstableregressionb}$}
+         
+               
+        
+        %\addlegendentry{Legenden Eintrag};
+        \end{semilogyaxis} 
 
+	\end{tikzpicture}
 \end{frame}
 
 \begin{frame}
