--- a/HelicesRNAs.tex
+++ b/HelicesRNAs.tex
@@ -291,7 +291,7 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
          \addlegendentry{Helices}         
          \addplot table[x=X,y={create col/linear
          regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix.txt};
-         \addlegendentry{$0.11 \cdot x +0.65$}
+         \addlegendentry{$0.18 \cdot x -1.42$} 
  
          \addplot+[only marks,mark=x]
          table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAshapes_5.txt};
@@ -318,25 +318,49 @@ $\pgfmathprintnumber{\pgfplotstableregressiona} \cdot x
 		%\begin{semilogyaxis}[xlabel=Index,ylabel=Value]
 		%\addplot gnuplot[color=blue,mark=*]{1.2196*(x**(-1.5))*(2.6180**x)}; 
 		%\end{semilogyaxis}
-		\begin{semilogyaxis}[legend style={font=\small},xlabel={Sequence
+		\begin{semilogyaxis}[legend style={font=\tiny},xlabel={Sequence
          length},ylabel={Nr. of Helices},width=\textwidth,legend
          style={nodes=right}, legend pos= north west]
-     
+
+         \addplot+[only marks,mark=-]
+         table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix.txt};
+         \addlegendentry{energy range unlimited}
+         \addplot table[x=X,y={create col/linear
+         regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix.txt};
+         \addlegendentry{$0.18 \cdot x -1.42$} 
+
+          \addplot+[only marks,mark=x]
+          table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_20kcal.txt};
+          \addlegendentry{energy range 20kcal/mol}
+          \addplot table[x=X,y={create col/linear
+          regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_20kcal.txt}; 
+          \addlegendentry{$0.12 \cdot x +0.44$} 
+       
+          \addplot+[only marks,mark=x]
+          table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_15kcal.txt};
+          \addlegendentry{energy range 15kcal/mol}
+          \addplot table[x=X,y={create col/linear
+          regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_15kcal.txt};
+          \addlegendentry{$0.0904 \cdot x +1.23$} 
+
+          \addplot+[only marks,mark=x]
+          table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_10kcal.txt};
+          \addlegendentry{energy range 10kcal/mol}
+          \addplot table[x=X,y={create col/linear
+          regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_10kcal.txt};
+          \addlegendentry{$0.0602 \cdot x +1.43$}      
+                                        
           \addplot+[only marks,mark=x]
           table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_5kcal.txt};
           \addlegendentry{energy range 5kcal/mol}
           \addplot table[x=X,y={create col/linear
-          regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_5kcal.txt};            
-         \addlegendentry{$0.11 \cdot x +0.65$} 
- 
-         \addplot+[only marks,mark=-]
-         table[x=X,y=Y]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix.txt};
-         \addlegendentry{completely}         
-         \addplot table[x=X,y={create col/linear
-         regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix.txt};
-          \addlegendentry{
- $\pgfmathprintnumber{\pgfplotstableregressiona} \cdot x
- \pgfmathprintnumber[print sign]{\pgfplotstableregressionb}$}
+          regression={y=Y}}]{/home/jhuang/workspace/RNAHeliCes/scripts/estimate_exponent_RNAhelix_5_5kcal.txt};
+          \addlegendentry{$0.0366 \cdot x +0.7$} 
+     
+                            
+%           \addlegendentry{
+%  $\pgfmathprintnumber{\pgfplotstableregressiona} \cdot x
+%  \pgfmathprintnumber[print sign]{\pgfplotstableregressionb}$}
          
                
         
