--- a/HelicesRNAs.tex
+++ b/HelicesRNAs.tex
@@ -71,16 +71,14 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
 \section{RNA folding by free energy minimization}
 \subsection{}
 \begin{frame}
-\frametitle{Classical secondary structure algorithms}
+\frametitle{\large Classical secondary structure algorithms (Zuker 1981)}
   \begin{block}{Simplifying Assumptions for Structure Prediction}
     \begin{itemize}
     \item RNA folds into one minimum free-energy structure.
     \item There are no knots (base pairs never cross).
-    \item The energy of a particular base pair in a double stranded regions is
-    sequence independent
     \end{itemize} 
   \end{block}
-  \begin{block}{RNA has different structural components}
+  \begin{block}{RNA has different structural domains}
     \begin{itemize}
     \item single-stranded regions (first described by Zuker and Stiegler in
     1981)
@@ -154,7 +152,7 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
 
 % frame 9
 \begin{frame}
-\frametitle{Abstract shape, Energy range: 5 kcal/mol}  
+\frametitle{Abstract shape, energy range: 5 kcal/mol}  
 \begin{figure}
   \includegraphics[scale=0.6]{images/shapes_example.jpg} 
 \end{figure}
@@ -163,6 +161,7 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
 
 % frame 10
 \section{develop a new structure abstraction}
+\frametitle{Drawback of abstract shape}
 \subsection{}
 \begin{frame}
 \frametitle{}
@@ -172,12 +171,12 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
    independence of the abstraction
    \end{itemize}
    \end{block}
-   \begin{block}{\small Drawback of abstract shape}
+   \begin{block}{\small Drawback example 1 of abstract shape}
    \begin{figure}
      \includegraphics[scale=0.55]{images/drawback_1.jpg} 
    \end{figure}
    \end{block}
-   \begin{block}{\small Drawback of abstract shape}
+   \begin{block}{\small Drawback example 2 of abstract shape}
    \begin{figure}
      \includegraphics[scale=0.55]{images/drawback_2.jpg} 
    \end{figure}
@@ -190,14 +189,15 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
 \frametitle{develop a new structure abstraction}
     The straightforward idea to overcome the position independence of the
     current available shape abstractions is
-    \begin{block}{what keeps track of positions}
+    \begin{block}{the position of which secondary structure domains will be
+    tracked}
     \begin{itemize} 
     \item helical regions of hairpin loop
     \item helical regions of multiloops %, as possible braching points, are structurally important    
     \item helical regions of stacked pairs, bulge and internal loops %are the main structural contributors 
     \end{itemize}
     \end{block}
-    \begin{block}{which positions of the base pair will be tracked}
+    \begin{block}{which positions of the vordefined structure domain will be tracked}
     \begin{itemize} 
     \item i
     \item j   
@@ -209,61 +209,78 @@ Shapes of RNA'' Nucleic Acids Research Vol. 32 No. 16}
 
 % frame landscape
 \begin{frame}
-\frametitle{energy landscape}  
+\frametitle{helices positions example}  
 \begin{figure}
-  \includegraphics[scale=0.4]{images/helices_position.jpg} 
+  \includegraphics[scale=0.5]{images/helices_position.jpg} 
+  \caption{The structure is composed of two helices which are closed by hairpin
+  loops (i,j) and (k,l), respectively. The positions are: i=8, j=13, k=35 and
+  l=41. Thus, this structure would be abstracted to [10.5,38]}
 \end{figure}
 \end{frame}
 
 % frame 11
 \begin{frame}[fragile]
   Output from the first trial version of helices shape
-  \begin{block}{\small Helices shape, Energy range: 5 kcal/mol}
-  %\begin{alltt}
+  \begin{block}{\tiny Helices shape, Energy range: 5 kcal/mol}
+  %\begin{alltt}     %[fontsize=\small] 
+  \tiny
   \begin{verbatim}
-        UCGCGCACAGGACAUCCUAGGUACAAGGCCGCCGU
--6.30   .((.((..(((....))).(((.....))))))).  [13.5,25]  
--4.60   ........(((....))).(((........)))..  [13.5,26.5] 
--3.90   ....((..(((....)))..)).............  [13.5]
--3.60   .........((....(((.......)))...))..  [22]
--3.40   ....((..(((....)))..))....((...))..  [13.5,30]
--3.20   ..((((.....((.......)).....)).))...  [17]
--2.80   .........((........(((.....))).))..  [25]
--2.40   ...................(((........)))..  [26.5]
--1.60   ....((..(((....)))..)).....((....))  [13.5,31.5]
+-10.7 ..((...((((((..(((((.((((...)))).)))))..))).)))..))..... [27] *
+-9.0  .......................((((((((((((.....)))))..))))))).. [38] *
+-6.7  ..((..((......))..))...((((((((((((.....)))))..))))))).. [11.5,38]
+-6.6  ..((.(((.....)))..))...((((((((((((.....)))))..))))))).. [11,38]
+-6.4  .(((((.........(((((.((((...)))).))))))))))..((....))... [27,49.5]
+-6.2  ..((((((....))))..))...((((((((((((.....)))))..))))))).. [10.5,38]
+-5.5  ..((....(((...))).))...((((((((((((.....)))))..))))))).. [13,38]
+-5.0  ..((((((...))))...))...((((((((((((.....)))))..))))))).. [10,38]
+-4.8  .(((((.........(((((.((((...)))).)))))))))).....((....)) [27,52.5]
+-4.6  ..(((((....)))....))...((((((((((((.....)))))..))))))).. [9.5,38]
+-4.2  .(((((.........(((((.((((...)))).))))))))))....((...)).. [27,51]
+       ...
+-3.3  .((((((....))).(((((.((((...)))).)))))..)))............. [9.5,27,22.5]
+-3.3  .(((((.........(((((.((((...)))).))))))))))....((....)). [27,51.5]
+-3.3  ..((((.....)).....))...((((((((((((.....)))))..))))))).. [9,38]
+-3.3  ..(((.((....)).(((((.((((...)))).)))))........)))....... [10.5,27,26]
+-3.3  ..((.(((.....)))..))...((((((((((..((...))..)))))))))).. [11,39]
+-3.2  ..((..((......))..))...((((((((.....(((....))))))))))).. [11.5,41.5]
+-3.1  ..((.(((.....)))..))...((((((((.....(((....))))))))))).. [11,41.5]
+-3.0  .(((((.........(((((.((((...)))).)))))))))).....((...)). [27,52]
+-2.9  ..((((((....))))..))...((((((((((..((...))..)))))))))).. [10.5,39]
+-2.9  ..(((...........((((.....)))).(((((.....))))).)))....... [23,38,26]
+-2.9  ..(((.............((((....))))(((((.....))))).)))....... [24.5,38,26]
+-2.8  .((.((((....))))((((.((((...)))).))))........))......... [10.5,27,24.5]
+-2.8  ..((.(((....)))(((((.((((...)))).)))))...........))..... [10.5,27,27]
+-2.8  ..((...((((((..(((.....(((......))))))..))).)))..))..... [29.5]
+-2.7  .((.(((....))).(((((.((((...)))).))))).......))......... [9.5,27,24.5]
+-2.7  ..((((((....))))..))...((((((((.....(((....))))))))))).. [10.5,41.5]
+-2.7  ..((...........(((((.((((...)))).))))).((.....)).))..... [27,44,27]
+-2.4  ..(((((....))).(((((.((((...)))).)))))...........))..... [9.5,27,27]
+-2.3  ................((((..(((...)))((((.....))))........)))) [36.5,27,38] *
   \end{verbatim} 
   %\end{alltt}
   \end{block}
 \end{frame}
 
-
+\normalsize
 % frame landscape
 \begin{frame}
-\frametitle{energy landscape}  
+\frametitle{energy barrier}  
 \begin{figure}
-  \includegraphics[scale=0.4]{images/energy_landscape.jpg} 
+  \includegraphics[scale=0.4]{images/energy_barrier.jpg} 
 \end{figure}
 \end{frame}
 
 
 \begin{frame}
-\frametitle{Possible problems}
-    \begin{itemize} 
-    \item do not preserve nesting of elements and might lead to abstract shapes
-    where a helix index occurs more than once $\rightarrow$ solved with
-    different representation form
-    \item abstracting from bulge and internal loops might be to rigorous
-    $\rightarrow$ refine the definition of the abstraction, such that all critical criteria
-    are met
-    \item records of helices is a lot more than the records of shapes
-    $\rightarrow$ runtime problem  %translation of ..的多
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-\frametitle{Growth of structure, helix and shape space}
+\frametitle{Possible problem}
+  \scriptsize
+  Although the helices space grows considerably slower than structure space, but
+  it is still exponential
+  \normalsize
+  \begin{block}{\tiny Growth of structure, helix and shape space}
+  %\begin{figure}
     \centering
-	\begin{tikzpicture}
+	\begin{tikzpicture}[scale=0.7]
 		%\begin{semilogyaxis}[xlabel=Index,ylabel=Value]
 		%\addplot gnuplot[color=blue,mark=*]{1.2196*(x**(-1.5))*(2.6180**x)}; 
 		%\end{semilogyaxis}
@@ -301,15 +318,22 @@ $\pgfmathprintnumber{\pgfplotstableregressiona} \cdot x
         
         %\addlegendentry{Legenden Eintrag};
         \end{semilogyaxis} 
-
 	\end{tikzpicture}
+	%\caption{Growth of structure, helix and shape space}	
+  %\end{figure}	
+  \end{block}
 \end{frame}
 
 
 \begin{frame}
-\frametitle{Growth of helix space  }
+\frametitle{Solution of possible problem}
+  \small
+  One of the solution: we limit the helices space by setting an energy range on
+  it
+  \normalsize
+  \begin{block}{\tiny Growth of helix space}     
     \centering
-	\begin{tikzpicture}
+	\begin{tikzpicture}[scale=0.7]
 		%\begin{semilogyaxis}[xlabel=Index,ylabel=Value]
 		%\addplot gnuplot[color=blue,mark=*]{1.2196*(x**(-1.5))*(2.6180**x)}; 
 		%\end{semilogyaxis}
@@ -361,19 +385,18 @@ $\pgfmathprintnumber{\pgfplotstableregressiona} \cdot x
         
         %\addlegendentry{Legenden Eintrag};
         \end{semilogyaxis} 
-
 	\end{tikzpicture}
+  \end{block}	
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Outlook: Designing RNA class predictors}
     \begin{itemize} 
-    \item develop abstraction
-    \item evaluate abstraction
-    \item algorithm implementation
-    \item algorithm evaluation
-    \item class predictors
+    \item Development of a new structure abstraction (helices index)
+    \item Implementation of an algorithm based on the structure abstraction
+    \item Evaluating the algorithm
+    \item Designing RNA class predictors.
     \end{itemize}
 \end{frame}
 
